--- a/TP Web - Slapena/Vista/SiteMaster.Master
+++ b/TP Web - Slapena/Vista/SiteMaster.Master
@@ -9,6 +9,7 @@
     </asp:ContentPlaceHolder>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <form id="form1" runat="server">
@@ -25,22 +26,13 @@
                                 <a class="nav-link active" aria-current="page" href="Default.aspx">ARTICULOS</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown
+
+                                <a class="nav-link" href="carro.aspx">CARRO
+                                    <i class="bi bi-cart-fill"></i>
                                 </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                                <asp:Label ID="lblCantidad" runat="server" Text="CANTIDAD CAMBIAR PARA MOSTRAR TOTAL" CssClass="nav-link active"></asp:Label>
                             </li>
                         </ul>
                     </div>
@@ -51,9 +43,6 @@
                 </asp:ContentPlaceHolder>
             </div>
             <footer>
-                <hr />
-                <h1>FOTER
-                </h1>
             </footer>
         </div>
     </form>
